[gd_scene load_steps=10 format=3 uid="uid://c0r7shauoi2ko"]

[ext_resource type="Script" path="res://Maça.gd" id="1_7xomg"]
[ext_resource type="Texture2D" uid="uid://b8xvduydg17an" path="res://sprites/maças/SemiMaçaB.png" id="2_nme23"]
[ext_resource type="Texture2D" uid="uid://cxb53njoue468" path="res://sprites/maças/MaçaB.png" id="3_q8llf"]
[ext_resource type="Texture2D" uid="uid://bc2ou8crbwwyc" path="res://sprites/maças/MaçaCompletaB.png" id="4_8j6m2"]
[ext_resource type="Texture2D" uid="uid://ca256t3sblus7" path="res://sprites/maças/Bainha.png" id="5_fqbbn"]
[ext_resource type="Texture2D" uid="uid://rtm6fe3njndi" path="res://sprites/maças/MaçaCompletaA.png" id="6_gwe11"]
[ext_resource type="Texture2D" uid="uid://cys61uv2f6kpl" path="res://sprites/maças/MaçaCompletaT.png" id="7_2uws1"]
[ext_resource type="Texture2D" uid="uid://bdcs6pvdp732s" path="res://sprites/maças/MaçaCompletaF.png" id="8_enwxb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g7cgs"]
radius = 57.2189

[node name="Maça" type="Node2D"]
script = ExtResource("1_7xomg")

[node name="MaçaBase" type="Sprite2D" parent="."]
scale = Vector2(10, 10)
texture = ExtResource("2_nme23")

[node name="Moldada" type="Sprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
texture = ExtResource("3_q8llf")

[node name="Completa" type="Sprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
texture = ExtResource("4_8j6m2")

[node name="Cabo" type="Sprite2D" parent="."]
visible = false
position = Vector2(37, 43)
scale = Vector2(10, 10)
texture = ExtResource("5_fqbbn")

[node name="CompletaAgua" type="Sprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
texture = ExtResource("6_gwe11")

[node name="CompletaTerra" type="Sprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
texture = ExtResource("7_2uws1")

[node name="CompletaFogo" type="Sprite2D" parent="."]
visible = false
scale = Vector2(10, 10)
texture = ExtResource("8_enwxb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g7cgs")

[node name="Craft" type="Button" parent="."]
visible = false
offset_right = 8.0
offset_bottom = 8.0
flat = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="pressed" from="Craft" to="." method="_on_craft_pressed"]
